--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /client/node_modules
 /node_modules
+/server/node_modules
 /.pnp
 .pnp.js
 
@@ -14,6 +15,8 @@
 
 # misc
 .DS_Store
+/client/.env
+/server/.env
 .env.local
 .env.development.local
 .env.test.local
